--- a/t3flex/Resources/Private/Html/Template/OneCol.html
+++ b/t3flex/Resources/Private/Html/Template/OneCol.html
@@ -1,31 +1,43 @@
+<?xml version="1.0" encoding="UTF-8" ?>
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:v="http://fedext.net/ns/vhs/ViewHelpers"
+	xmlns:f="http://typo3.org/ns/fluid/ViewHelpers">
+<head>
 <f:layout name="Default" />
-<f:section name="Main">
+<title>XSD Usage with extensions Fluid and VHS</title>
+</head>
+<body>
+	<f:section name="Main">
+		<div id="t3flex-left" data-role="panel" data-position="left"
+			data-theme="{settings.data-theme.left-panel}">
+			<f:if condition="{settings.leftPanelType} == 1">
+				<f:then>
+					<f:cObject typoscriptObjectPath="plugin.tx_t3flex.mainNav" />
+				</f:then>
+				<f:else>
+					<f:cObject typoscriptObjectPath="lib.contentLeft" />
+				</f:else>
+			</f:if>
+		</div>
 
-	<div id="t3flex-left"   data-role="panel" data-position="left" data-theme="{settings.data-theme.left-panel}">
-		<f:if condition="{settings.leftPanelType} == 1">
-			<f:then>
-				<f:cObject typoscriptObjectPath="plugin.tx_t3flex.mainNav" />
-			</f:then>
-			<f:else>
-				<f:cObject typoscriptObjectPath="lib.contentLeft" />
-			</f:else>
-		</f:if>
-	</div>
+		<div id="t3flex-right" data-role="panel" data-position="right"
+			data-theme="{settings.data-theme.right-panel}">
+			<f:if condition="{settings.rightPanelType} == 1">
+				<f:then>
+					<f:cObject typoscriptObjectPath="plugin.tx_t3flex.mainNav" />
+				</f:then>
+				<f:else>
+					<f:cObject typoscriptObjectPath="lib.contentRight" />
+				</f:else>
+			</f:if>
+		</div>
 
-	<div id="t3flex-right"   data-role="panel" data-position="right" data-theme="{settings.data-theme.right-panel}">
-		<f:if condition="{settings.rightPanelType} == 1">
-			<f:then>
-				<f:cObject typoscriptObjectPath="plugin.tx_t3flex.mainNav" />
-			</f:then>
-			<f:else>
-				<f:cObject typoscriptObjectPath="lib.contentRight" />
-			</f:else>
-		</f:if>
-	</div>
-
-	<div id="t3flex-center" data-role="content" data-theme="{settings.data-theme.center}">
-		<f:cObject typoscriptObjectPath="lib.contentCenter" />
-	</div> 
+		<div id="t3flex-center" data-role="content"
+			data-theme="{settings.data-theme.center}">
+			<f:cObject typoscriptObjectPath="lib.contentCenter" />
+		</div>
 
 
-</f:section>
+	</f:section>
+</body>
+</html>
