--- a/t3flex/Resources/Private/Html/Template/OneCol.html
+++ b/t3flex/Resources/Private/Html/Template/OneCol.html
@@ -37,6 +37,11 @@
 			<f:cObject typoscriptObjectPath="lib.contentCenter" />
 		</div>
 
+		<div id="t3flex-footer" 
+			 data-role="footer" 
+			 data-position="fixed" >
+			<f:cObject typoscriptObjectPath="lib.contentFooter" />
+		</div>
 
 	</f:section>
 </body>
