Fixed header and Footer

--- a/t3flex/Resources/Private/Html/Template/OneCol.html
+++ b/t3flex/Resources/Private/Html/Template/OneCol.html
@@ -39,7 +39,8 @@
 
 		<div id="t3flex-footer" 
 			 data-role="footer" 
-			 data-position="fixed" >
+			 data-position="fixed" 
+			 data-tap-toggle="false">
 			<f:cObject typoscriptObjectPath="lib.contentFooter" />
 		</div>
 
