--- a/t3flex/Resources/Private/Html/Partial/Header.html
+++ b/t3flex/Resources/Private/Html/Partial/Header.html
@@ -1,5 +1,5 @@
 {namespace flex=TYPO3\T3flex\ViewHelpers}
-<div id="headerContent" data-role="header" data-theme="a">
+<div id="headerContent" data-role="header" data-theme="a" data-position="fixed" data-tap-toggle="false">
 
 	<flex:switch expression="{settings.leftPanelType}">
 	  <flex:case case="1">
