--- a/t3flex/Resources/Private/Html/Template/OneCol.html
+++ b/t3flex/Resources/Private/Html/Template/OneCol.html
@@ -32,18 +32,10 @@
 			</f:if>
 		</div>
 
-		<div id="t3flex-center" data-role="content"
+		<div id="t3flex-center" class="t3flex-center" data-role="content"
 			data-theme="{settings.data-theme.center}">
 			<f:cObject typoscriptObjectPath="lib.contentCenter" />
 		</div>
-
-		<div id="t3flex-footer" 
-			 data-role="footer" 
-			 data-position="fixed" 
-			 data-tap-toggle="false">
-			<f:cObject typoscriptObjectPath="lib.contentFooter" />
-		</div>
-
 	</f:section>
 </body>
 </html>
