add new left button type

--- a/t3flex/Resources/Private/Html/Partial/Header.html
+++ b/t3flex/Resources/Private/Html/Partial/Header.html
@@ -12,10 +12,10 @@
 			<f:cObject typoscriptObjectPath="plugin.tx_t3flex.backButton" />
 		  </flex:case>
 		  <flex:case case="3">
-			<a href="{f:uri.page(pageUid:settings.leftPanelTargetPid)}" data-icon="{settings.data-icon.headerLeft}" data-iconpos="notext" data-transition="pop">Pid</a>
+			<a href="{f:uri.page(pageUid:settings.leftPanelTargetPid)}" data-icon="{settings.data-icon.headerLeft}" data-icon="back" data-rel="back">Zurück</a>
 		  </flex:case>
 		  <flex:case case="4">
-		 	<a href="#t3flex-left" data-icon="{settings.data-icon.headerLeft}" data-iconpos="notext">Left</a>
+			<a href="{f:uri.page(pageUid:settings.leftPanelTargetPid)}" data-icon="{settings.data-icon.headerLeft}" data-iconpos="notext" data-transition="pop">Pid</a>
 		  </flex:case>
 		  <flex:case case="default">
 		 	<a href="#t3flex-left" data-icon="{settings.data-icon.headerLeft}" data-iconpos="notext">Left</a>
