--- a/t3flex/Resources/Private/Html/Partial/Header.html
+++ b/t3flex/Resources/Private/Html/Partial/Header.html
@@ -12,7 +12,7 @@
 			<f:cObject typoscriptObjectPath="plugin.tx_t3flex.backButton" />
 		  </flex:case>
 		  <flex:case case="3">
-			<a href="{f:uri.page(pageUid:settings.leftPanelTargetPid)}" data-icon="{settings.data-icon.headerLeft}" data-icon="back" data-rel="back">Zurück</a>
+			<a href="{f:uri.page(pageUid:settings.leftPanelTargetPid)}" data-icon="{settings.data-icon.headerLeft}" data-icon="back">Zurück</a>
 		  </flex:case>
 		  <flex:case case="4">
 			<a href="{f:uri.page(pageUid:settings.leftPanelTargetPid)}" data-icon="{settings.data-icon.headerLeft}" data-iconpos="notext" data-transition="pop">Pid</a>
