back-button text removed

--- a/t3flex/Resources/Private/Html/Partial/Header.html
+++ b/t3flex/Resources/Private/Html/Partial/Header.html
@@ -18,7 +18,7 @@
 				<a href="#t3flex-left" data-icon="{settings.data-icon.headerLeft}" data-iconpos="notext">Left</a>
 			</flex:case>
 			 <flex:case case="5">
-				<a href="{f:uri.page(pageUid:settings.leftPanelTargetPid)}" data-icon="{settings.data-icon.headerLeft}" data-icon="back">Zurück</a>
+				<a href="{f:uri.page(pageUid:settings.leftPanelTargetPid)}" data-icon="{settings.data-icon.headerLeft}" data-icon="back" data-iconpos="notext">Back</a>
 			  </flex:case>
 			<flex:case case="default">
 				<a href="#t3flex-left" data-icon="{settings.data-icon.headerLeft}" data-iconpos="notext">Left</a>
