--- a/t3flex/Resources/Private/Html/Partial/Header.html
+++ b/t3flex/Resources/Private/Html/Partial/Header.html
@@ -42,6 +42,9 @@
 				<f:cObject typoscriptObjectPath="page.10.settings.pageTitle" />
 			</h1>
 		</f:if>
+		<f:if condition="{settings.pageTitleType} == 5">
+			<input type="text" name="title-search" id="title-search" value="" data-mini="true" />
+		</f:if>
 	
 		<flex:switch expression="{settings.rightPanelType}">
 		  <flex:case case="1">
